gccida/g0/combine_predictions_for_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:692:4: error: expected ';' after expression
rtx prob_note; // [rsp+28h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:692:5: error: use of undeclared identifier 'prob_note'
rtx prob_note; // [rsp+28h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:698:4: error: expected ';' after expression
rtx note; // [rsp+40h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:698:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+40h] [rbp-20h] 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:699:6: error: use of undeclared identifier 'pnote'; did you mean 'none'?
rtx *pnote; // [rsp+48h] [rbp-18h] 
     ^~~~~
     none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:699:5: error: invalid operands to binary expression ('struct rtx_def *' and 'int')
rtx *pnote; // [rsp+48h] [rbp-18h] 
~~~ ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:701:1: error: use of undeclared identifier 'prob_note'
prob_note = find_reg_note( insn, REG_BR_PROB, 0LL); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:702:1: error: use of undeclared identifier 'pnote'
pnote = ( rtx *)insn[3].fld; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:702:16: error: expected expression
pnote = ( rtx *)insn[3].fld; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:710:7: error: use of undeclared identifier 'note'; did you mean 'none'?
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
      ^~~~
      none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:710:12: error: expression is not assignable
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
      ~~~~ ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:710:34: error: use of undeclared identifier 'note'; did you mean 'none'?
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                 ^~~~
                                 none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:710:40: error: use of undeclared identifier 'note'; did you mean 'none'?
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                       ^~~~
                                       none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:710:45: error: expression is not assignable
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                       ~~~~ ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:710:53: error: expected ')'
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:710:5: note: to match this '('
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:712:19: error: use of undeclared identifier 'note'; did you mean 'goto'?
if ( *( ( _BYTE *)note + 2) == 20 ) 
                  ^~~~
                  goto
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:712:19: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:714:43: error: use of undeclared identifier 'note'
probability = *( _QWORD *)( *( _QWORD *)( note->fld[0].rtwint + 16) + 8LL); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/predict.c:716:57: error: use of undeclared identifier 'note'
if ( best_predictor > ( int)*( _QWORD *)( *( _QWORD *)( note->fld[0].rtwint + 8) + 8LL) ) 
                                                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_predictions_for_insn/src/obj/predict.o] Error 1
